examples/test/testpolicy9879.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9879
  namespace: namespace114
spec:
  podSelector:
    matchLabels:
      key23: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value42
          key32: value37
          key42: value30
      podSelector:
        matchLabels:
          key9: value8
          key21: value9
          key13: value42
